--- a/app.yaml
+++ b/app.yaml
@@ -4,13 +4,13 @@ runtime: python27
 api_version: 1
 threadsafe: yes
 
+libraries:
+- name: jinja2
+  version: "2.6"
+
 handlers:
 - url: /static
   static_dir: static
 
-- url: /.*
+- url: /
   script: application.app
-
-libraries:
-- name: jinja2
-  version: "2.6"
