--- a/app.yaml
+++ b/app.yaml
@@ -4,6 +4,10 @@ runtime: python27
 api_version: 1
 threadsafe: yes
 
+skip_files:
+- ^.+\.scss$
+- ^node_modules.*$
+
 libraries:
 - name: jinja2
   version: "2.6"
